--- a/content/redovisning/03_kmom03.md
+++ b/content/redovisning/03_kmom03.md
@@ -2,5 +2,22 @@
 ---
 Redovisning kmom03
 =========================
+Jag har arbetat lite med unittester i oopython. Jag tycker det är väldigt viktigt med unittester så saker inte slutar fungerar om man vill ändra något.
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/03_kmom03.md`.
+Att skriva testbar kod är för mig att skriva kod som är uppdelad i små funktioner så att det är lätt att skriva testfunktioner för dem. Jag tycker att det är en bra sak att göra men det kan däremot vara svårt att göra.
+
+Positiva test är utformade för att verifiera att programmet fungerar som det är tänkt. Genom en specifik (korrekt) indata ska programmet ge förväntad utdata.
+
+Negativa tester är när man testar att koden även fungerar när man använder den på fel sätt, t.ex. om man skriver in bokstäver när programmet bara accepterar siffror.
+
+White-box testing är när man testar delar av koden. Ett white-box test testar hur koden är uppbyggd. Man kollar hur flödet är i programmet, om det är välskrivet och logiskt uppbyggt.
+
+Black-box testing är när man testar hela programmet istället för delar av koden. Ett black-box test testar hur programmet fungerar för användaren. Testaren behöver inte veta hur koden är skriven, utan syftet är att undersöka om programmet fungerar som det är avsett att göra.
+
+Ett grey-box test testar både programmets funktion och hur koden är skriven, samt förhållandet mellan de båda.
+
+Det första jag gjorde var att lägga till länken i navbaren. Sedan kopierade jag från förra spelet så jag hade en grund att utgå ifrån. Därefter använde jag den kod jag kunde, lade till och modifierade. Jag skrev en massa kod och därefter testade jag programmet och redigerade. Det sista jag gjorde var att skapa mitt klassdiagram och ta en skärmdump av min code coverage.
+
+Det gick inte bra att komma igång med PHPUnit. Jag försökte följa videon men fick inte samma resultat som Mikael fick. Eftersom jag inte kunde lösa problemet så försökte jag fråga på gitter. Till slut fick jag reda på att jag använde fel version av php. Själva testningen gick sedan bra att genomföra. Jag testade det som gick att testa.
+
+I Detta kursmoment har jag lärt mig mer om unittester. Jag har jobbat med testning i oopython innan men aldrig i php. Dessutom var Code Coverage delen något helt nytt för mig. Det var intressant och användbart att kunna se icke testade delar.
