--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -3,4 +3,15 @@
 Redovisning kmom04
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/04_kmom04.md`.
+Jag har fortfarande lite svårt att förstå hur trait och interface fungerar. Men det verkar vara ett smidigt sätt att kunna skriva kod som går att använda i olika klasser. Det är nog något man kan ha nytta av.
+
+Begreppet kontroller är relativt nytt. Det verkar vara något som man kan använda istället för router.
+
+Jag hade redan intelligens från förra kursmomentet. Jag gjorde så att användaren kan trycka på antingen New game eller Continue game. Klickar användaren på New Game så slår spelaren och datorn en tärning var, och den som får högst värde får börja. För att kasta tärningen så trycker man på Roll dice. Spelaren får själv bestämma hur många gånger hen vill kasta tärningen. Jag använder Turn Score och Total Score för att räkna poängen. Turn Score är poängen man har fått under rundan men slår man en etta så blir man av med alla poäng. Total score är poängen som man har samlar ihop under spelets gång och dem kan man inte bli av med. Den första som kommer upp i 100 poäng är vinnaren, då avslutas spelet och vinnaren presenteras.
+
+Mina reflektioner är att det är mer att hålla koll på. Jag förstår nu mer varför man använder ramverk och hur det kan hjälpa än själv, t.ex. att man inte behöver starta en session själv, utan ramverket gör det åt oss.
+
+När jag skulle testa koden ville jag bland annat kunna göra assertIsArray() men det visade sig att jag hade en för gammal version av phpunit. Jag frågade då i gitter om det var säkert att uppdatera phpunit utan att förstöra något. Jag fick till svar att jag kunde göra det. Jag började då undersöka vilken version som passsade mina behov och lyckades installera det.
+När jag hade installerat rätt version av phpunit så gick testerna bra och jag fick en bra kodtäckning. Lines blev 96.30% i medel. Functions and methods blev 94.44% i medel. Classes and Traits blev 87.50% i medel.
+
+Fast jag har vissa frågetecken gällande trait och interface och hur de kan användas så är det ändå veckans TIL för mig. Jag har också blivit lite bättre på enhetstestning.
