--- a/content/redovisning/04_kmom04.md
+++ b/content/redovisning/04_kmom04.md
@@ -11,7 +11,6 @@ Jag hade redan intelligens från förra kursmomentet. Jag gjorde så att använd
 
 Mina reflektioner är att det är mer att hålla koll på. Jag förstår nu mer varför man använder ramverk och hur det kan hjälpa än själv, t.ex. att man inte behöver starta en session själv, utan ramverket gör det åt oss.
 
-När jag skulle testa koden ville jag bland annat kunna göra assertIsArray() men det visade sig att jag hade en för gammal version av phpunit. Jag frågade då i gitter om det var säkert att uppdatera phpunit utan att förstöra något. Jag fick till svar att jag kunde göra det. Jag började då undersöka vilken version som passsade mina behov och lyckades installera det.
-När jag hade installerat rätt version av phpunit så gick testerna bra och jag fick en bra kodtäckning. Lines blev 96.30% i medel. Functions and methods blev 94.44% i medel. Classes and Traits blev 87.50% i medel.
+När jag skulle testa koden ville jag bland annat kunna göra assertIsArray() men det visade sig att jag hade en för gammal version av phpunit. Jag frågade då i gitter om det var säkert att uppdatera phpunit utan att förstöra något. Jag fick till svar att jag kunde göra det. Jag började då undersöka vilken version som passsade mina behov och lyckades installera det. När jag hade installerat rätt version av phpunit så gick testerna bra och jag fick en bra kodtäckning. Lines blev 96.30% i medel. Functions and methods blev 94.44% i medel. Classes and Traits blev 87.50% i medel.
 
 Fast jag har vissa frågetecken gällande trait och interface och hur de kan användas så är det ändå veckans TIL för mig. Jag har också blivit lite bättre på enhetstestning.
